ResponseEntity for return added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.datasource.deiver-class-name=org.postresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/quiz_questiondb
 spring.datasource.username=postgres
 spring.datasource.password=1996
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
